--- a/pom.xml
+++ b/pom.xml
@@ -558,6 +558,14 @@
             <version>1.2.1</version>
             <exclusions>
               <exclusion>
+                  <groupId>org.mortbay.jetty</groupId>
+                  <artifactId>servlet-api</artifactId>
+              </exclusion>
+              <exclusion>
+                  <groupId>org.mortbay.jetty</groupId>
+                  <artifactId>servlet-api-2.5</artifactId>
+              </exclusion>
+              <exclusion>
                 <artifactId>jets3t</artifactId>
                 <groupId>net.java.dev.jets3t</groupId>
               </exclusion>
@@ -670,6 +678,14 @@
             <version>1.0.3-mapr-3.0.2</version>
             <exclusions>
               <exclusion>
+                  <groupId>org.mortbay.jetty</groupId>
+                  <artifactId>servlet-api</artifactId>
+              </exclusion>
+              <exclusion>
+                  <groupId>org.mortbay.jetty</groupId>
+                  <artifactId>servlet-api-2.5</artifactId>
+              </exclusion>
+              <exclusion>
                 <artifactId>asm</artifactId>
                 <groupId>asm</groupId>
               </exclusion>
@@ -780,6 +796,14 @@
                 <artifactId>commons-logging</artifactId>
                 <groupId>commons-logging</groupId>
               </exclusion>
+              <exclusion>
+                <groupId>org.mortbay.jetty</groupId>
+                <artifactId>servlet-api</artifactId>
+              </exclusion>
+              <exclusion>
+                <groupId>org.mortbay.jetty</groupId>
+                <artifactId>servlet-api-2.5</artifactId>
+              </exclusion>
             </exclusions>
           </dependency>
         </dependencies>
@@ -806,6 +830,14 @@
               <exclusion>
                 <artifactId>commons-logging</artifactId>
                 <groupId>commons-logging</groupId>
+              </exclusion>
+              <exclusion>
+                <groupId>org.mortbay.jetty</groupId>
+                <artifactId>servlet-api</artifactId>
+              </exclusion>
+              <exclusion>
+                <groupId>org.mortbay.jetty</groupId>
+                <artifactId>servlet-api-2.5</artifactId>
               </exclusion>
             </exclusions>
           </dependency>
