--- a/exec/jdbc-all/pom.xml
+++ b/exec/jdbc-all/pom.xml
@@ -184,97 +184,6 @@
     </dependency>
   </dependencies>
 
-  <build>
-    <plugins>
-
-      <plugin>
-        <groupId>com.github.wvengen</groupId>
-        <artifactId>proguard-maven-plugin</artifactId>
-        <version>2.0.7</version>
-        <executions>
-          <execution>
-            <phase>package</phase>
-            <goals>
-              <goal>proguard</goal>
-            </goals>
-          </execution>
-        </executions>
-        <dependencies>
-          <dependency>
-            <groupId>net.sf.proguard</groupId>
-            <artifactId>proguard-base</artifactId>
-            <version>4.11</version>
-            <scope>runtime</scope>
-          </dependency>
-        </dependencies>
-        <configuration>
-          <proguardVersion>4.11</proguardVersion>
-          <obfuscate>false</obfuscate>
-          <includeDependencyInjar>true</includeDependencyInjar>
-          <outjar>${project.build.finalName}-dirty.jar</outjar>
-          <outputDirectory>${project.build.directory}</outputDirectory>
-          <maxMemory>6g</maxMemory>
-          <options>
-            <option>-dontobfuscate</option>
-            <option>-dontoptimize</option>
-            <option>-ignorewarnings</option>
-            <option>-keep class org.apache.drill.exec.proto.** { *; }</option>
-            <option>-keep class org.apache.drill.common.types.** { *; }</option>
-            <option>-keep class org.apache.drill.jdbc.Driver { *; }</option>
-            <option>-keep class org.apache.drill.jdbc.DrillJdbc40Factory { *; }</option>
-            <option>-keep class org.apache.drill.jdbc.DrillJdbc41Factory { *; }</option>
-            <option>-keep class org.apache.drill.common.config.CommonConstants { *; }</option>
-            <option>-keep class org.apache.drill.common.config.ConfigProvider { *; }</option>
-            <option>-keep class org.apache.drill.common.config.DrillConfig { *; }</option>
-            <option>-keep class org.apache.drill.common.config.NestedConfig { *; }</option>
-            <option>-keep class ch.qos.logback.** { *; }</option>
-            <option>-keep class org.slf4j.** { *; }</option>
-            <option>-keep class * implements com.fasterxml.jackson.databind.cfg.ConfigFeature { *; }</option>
-            <option>-keep class * implements com.fasterxml.jackson.databind.jsontype.TypeIdResolver { *; }</option>
-            <!-- do not mess with enums, Java doesn't like it -->
-            <option>-keep enum ** { *; }</option>
-          </options>
-          <libs>
-            <lib>${java.home}/lib/rt.jar</lib>
-            <lib>${java.home}/lib/jsse.jar</lib>
-          </libs>
-        </configuration>
-      </plugin>
-
-      <plugin>
-        <artifactId>maven-antrun-plugin</artifactId>
-        <executions>
-          <execution>
-            <phase>package</phase>
-            <configuration>
-              <target>
-                <delete dir="${project.build.directory}/dirty"/>
-                <mkdir dir="${project.build.directory}/dirty"/>
-                <unzip src="${project.build.directory}/${project.build.finalName}-dirty.jar" dest="${project.build.directory}/dirty">
-                  <patternset>
-                    <exclude name="**/*.java"/>
-                    <exclude name="org.codehaus.commons.compiler.properties"/> <!-- This leads jad-ui to not parse classes under 'org/' -->
-                    <exclude name="**/*.SF"/>
-                    <exclude name="**/*.RSA"/>
-                    <exclude name="**/*.DSA"/>
-                    <exclude name="META-INF/*.SF"/>
-                    <exclude name="META-INF/*.RSA"/>
-                    <exclude name="META-INF/*.DSA"/>
-                  </patternset>
-                </unzip>
-                <jar destfile="${project.build.directory}/${project.build.finalName}.jar" basedir="${project.build.directory}/dirty"/>
-                <delete dir="${project.build.directory}/dirty"/>
-              </target>
-            </configuration>
-            <goals>
-              <goal>run</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
-
-    </plugins>
-  </build>
 
   <pluginRepositories>
     <pluginRepository>
@@ -292,6 +201,100 @@
   </pluginRepositories>
 
   <profiles>
+    <profile>
+      <id>jdbc</id>
+      <build>
+        <plugins>
+
+          <plugin>
+            <groupId>com.github.wvengen</groupId>
+            <artifactId>proguard-maven-plugin</artifactId>
+            <version>2.0.7</version>
+            <executions>
+              <execution>
+                <phase>package</phase>
+                <goals>
+                  <goal>proguard</goal>
+                </goals>
+              </execution>
+            </executions>
+            <dependencies>
+              <dependency>
+                <groupId>net.sf.proguard</groupId>
+                <artifactId>proguard-base</artifactId>
+                <version>4.11</version>
+                <scope>runtime</scope>
+              </dependency>
+            </dependencies>
+            <configuration>
+              <proguardVersion>4.11</proguardVersion>
+              <obfuscate>false</obfuscate>
+              <includeDependencyInjar>true</includeDependencyInjar>
+              <outjar>${project.build.finalName}-dirty.jar</outjar>
+              <outputDirectory>${project.build.directory}</outputDirectory>
+              <maxMemory>6g</maxMemory>
+              <options>
+                <option>-dontobfuscate</option>
+                <option>-dontoptimize</option>
+                <option>-ignorewarnings</option>
+                <option>-keep class org.apache.drill.exec.proto.** { *; }</option>
+                <option>-keep class org.apache.drill.common.types.** { *; }</option>
+                <option>-keep class org.apache.drill.jdbc.Driver { *; }</option>
+                <option>-keep class org.apache.drill.jdbc.DrillJdbc40Factory { *; }</option>
+                <option>-keep class org.apache.drill.jdbc.DrillJdbc41Factory { *; }</option>
+                <option>-keep class org.apache.drill.common.config.CommonConstants { *; }</option>
+                <option>-keep class org.apache.drill.common.config.ConfigProvider { *; }</option>
+                <option>-keep class org.apache.drill.common.config.DrillConfig { *; }</option>
+                <option>-keep class org.apache.drill.common.config.NestedConfig { *; }</option>
+                <option>-keep class ch.qos.logback.** { *; }</option>
+                <option>-keep class org.slf4j.** { *; }</option>
+                <option>-keep class * implements com.fasterxml.jackson.databind.cfg.ConfigFeature { *; }</option>
+                <option>-keep class * implements com.fasterxml.jackson.databind.jsontype.TypeIdResolver { *; }</option>
+                <!-- do not mess with enums, Java doesn't like it -->
+                <option>-keep enum ** { *; }</option>
+              </options>
+              <libs>
+                <lib>${java.home}/lib/rt.jar</lib>
+                <lib>${java.home}/lib/jsse.jar</lib>
+              </libs>
+            </configuration>
+          </plugin>
+
+          <plugin>
+            <artifactId>maven-antrun-plugin</artifactId>
+            <executions>
+              <execution>
+                <phase>package</phase>
+                <configuration>
+                  <target>
+                    <delete dir="${project.build.directory}/dirty"/>
+                    <mkdir dir="${project.build.directory}/dirty"/>
+                    <unzip src="${project.build.directory}/${project.build.finalName}-dirty.jar" dest="${project.build.directory}/dirty">
+                      <patternset>
+                        <exclude name="**/*.java"/>
+                        <exclude name="org.codehaus.commons.compiler.properties"/> <!-- This leads jad-ui to not parse classes under 'org/' -->
+                        <exclude name="**/*.SF"/>
+                        <exclude name="**/*.RSA"/>
+                        <exclude name="**/*.DSA"/>
+                        <exclude name="META-INF/*.SF"/>
+                        <exclude name="META-INF/*.RSA"/>
+                        <exclude name="META-INF/*.DSA"/>
+                      </patternset>
+                    </unzip>
+                    <jar destfile="${project.build.directory}/${project.build.finalName}.jar" basedir="${project.build.directory}/dirty"/>
+                    <delete dir="${project.build.directory}/dirty"/>
+                  </target>
+                </configuration>
+                <goals>
+                  <goal>run</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+
+        </plugins>
+      </build>
+    </profile>
     <!-- mondrian data includes 10s of MBs of JSON file
         if you want to include them run maven with -Pwith-mondrian-data -->
     <profile>
