--- a/exec/java-exec/src/main/resources/drill-module.conf
+++ b/exec/java-exec/src/main/resources/drill-module.conf
@@ -42,7 +42,7 @@ drill.exec: {
           count: 7200,
           delay: 500
         },
-        threads: 10
+        threads: 1
       }
     },
     use.ip : false
@@ -120,11 +120,11 @@ drill.exec: {
     filesystem: "drill-local:///"
   },
   buffer:{
-    impl: "org.apache.drill.exec.work.batch.UnlimitedRawBatchBuffer",
-    size: "6",
+    impl: "org.apache.drill.exec.work.batch.SpoolingRawBatchBuffer",
+    size: "2",
     spooling: {
       delete: false,
-      size: 100000000
+      size: 1000
     }
   },
   compile: {
