--- a/exec/jdbc/pom.xml
+++ b/exec/jdbc/pom.xml
@@ -129,8 +129,7 @@
       <dependencies>
         <dependency>
           <groupId>org.apache.hadoop</groupId>
-          <artifactId>hadoop-core</artifactId>
-          <version>2.4.1-mapr-1408-SNAPSHOT</version>
+          <artifactId>hadoop-common</artifactId>
           <exclusions>
             <exclusion>
               <artifactId>commons-logging</artifactId>
