--- a/pom.xml
+++ b/pom.xml
@@ -1279,7 +1279,7 @@
           <dependency>
             <groupId>org.apache.calcite</groupId>
             <artifactId>calcite-core</artifactId>
-            <version>1.4.0-drill-r10</version>
+            <version>1.4.0-drill-1.4.0-mapr-r1-20160325193805-aacdb28</version>
             <exclusions>
               <exclusion>
                 <groupId>org.jgrapht</groupId>
